--- a/.github/workflows/Render-README.yaml
+++ b/.github/workflows/Render-README.yaml
@@ -17,7 +17,10 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
         
-      - name: Set up Quarto
+      - name: Setup Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+
+      - name: Render using Quarto
         uses: quarto-dev/quarto-actions/render@v2
         with:
           to: gfm
