--- a/.github/workflows/Render-README.yaml
+++ b/.github/workflows/Render-README.yaml
@@ -28,5 +28,7 @@ jobs:
       
       - name: Commit results
         run: |
+          git config --global user.name 'rmtrane'
+          git config --global user.email 'rmtrane@gmail.com'
           git commit README.md -m "Re-build REAMDE.qmd on push" || echo "No changes to commit"
           git push origin || echo "No changes to commit"
