--- a/.github/workflows/Render-README.yaml
+++ b/.github/workflows/Render-README.yaml
@@ -30,5 +30,6 @@ jobs:
         run: |
           git config --global user.name 'rmtrane'
           git config --global user.email 'rmtrane@gmail.com'
-          git commit README.md -m "Re-build REAMDE.qmd on push" || echo "No changes to commit"
+          git add README.md
+          git commit -m "Re-build README.qmd on push" || echo "No changes to commit"
           git push origin || echo "No changes to commit"
